--- a/frontend/src/input.css
+++ b/frontend/src/input.css
@@ -9,3 +9,8 @@
 .conferenceiconbtn{
     @apply rounded-full bg-[rgba(0,0,0,0.5)] hover:bg-[rgba(0,0,0,0.7)] p-1 cursor-pointer;
 }
+
+*{
+    margin: 0;
+    padding: 0;
+}
